agregado de imagen

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
      
       
     <div>
-    <img src="C:\Users\lasan\Desktop\INTI\normalsgo1_.jpg"  alt="300">
+    <img src="C:\Users\lasan\Desktop\INTI\css\normalsgo1_.jpg"  alt="300">
   </header>
    <main> 
         <section class="container-quienessomos" id="quienes-somos">
@@ -49,15 +49,18 @@
           <p>
             Educacion Inicial <br>
             <p>sala de maternal <br>
-              <p><img src="C:\Users\lasan\Desktop\INTI\jadindeinfantes.jpg" alt="100">
+              <p><img src="css/jadindeinfantes.jpg" alt="100">
                </p>
             sala de 4 <br>
              sala de 5 <br>
           </p>
             Educacion Primaria <br>
+            <p><img src="css/primaria.jpg" alt=""></p>
 
             Educacion secundaria <br>
+            <p><img src="css/secundaria.jpg" alt=""></p>
             Educacion Superior <br>
+            <p><img src="css/superior.jpg" alt=""></p>
           </p>
           <section class="contenedor-ultimas-noticias" id="ultimas-noticias">
             <h2>Últimas Noticias</h2>
