--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
      <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proyecto Final</title> 
-    <link rel="stylesheet" href="CCSS/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
       <link rel="shortcut icon" href="favicon.png" type="image/png">
       <script src="https://kit.fontawesome.com/e86336ed8e.js" crossorigin="anonymous"></script>
  </head>
