--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
      
       
     <div>
-    <img src="C:\Users\lasan\Desktop\INTI\css\normalsgo1_.jpg"  alt="300">
+    <img src="css/normalsgo1_.jpg"  alt="300">
   </header>
    <main> 
         <section class="container-quienessomos" id="quienes-somos">
