--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
           <li><a href="#porque-elegirnos">¿Por qué elegirnos?</a></li>
           <li><a href="#propuestaeducativa">Propuesta Educativa</a></li>
           <li><a href="#ultimas-noticias">Últimas Noticias</a></li>
+          <li><a href="formulario.html" class="a-nav">Contacto</a></li>        
+
          </ul> 
       </nav>
    <header> 
