--- a/formulario.html
+++ b/formulario.html
@@ -73,6 +73,6 @@
         <!-- <input type="submit" value="Enviar" /> -->
       </form>
     </div>
-    <a href="index1.html">Inicio</a>
+    <a href="index.html">Inicio</a>
   </body>
 </html>
