--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
       <footer>
         <div class="box">
             <div class="red-social">
-              <a href="#" class="fa fa-facebook"></a>
-              <a href="#" class="fa fa-instagram"></a>
-              <a href="#" class="fa fa-twitter"></a>
+              <a href="https://www.facebook.com/" class="fa fa-facebook"></a>
+              <a href="https://www.instagram.com/" class="fa fa-instagram"></a>
+              <a href="https://twitter.com/" class="fa fa-twitter"></a>
             </div>
         </div> 
          <h2> Untref School</h2>
